<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="Reload"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:title="@string/action_sort_title"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_popular"
                android:title="@string/label_sort_popular" />
            <item
                android:id="@+id/action_sort_top_rated"
                android:title="@string/label_sort_top_rated" />
            <item
                android:id="@+id/action_list_favorites"
                android:title="@string/label_list_favorites" />
        </menu>
    </item>
</menu>