<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_active_view_mode"
            android:visibility="invisible"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/dark_primary_body"
            android:padding="18dp"
            style="@style/SmallLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_active_view_mode" />
        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />
        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_empty_favorites"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp"
                android:layout_marginBottom="42dp"
                android:textColor="@color/dark_background_body"
                android:text="@string/empty_favorites_title"/>
            <Button
                android:id="@+id/btn_browse_popular"
                android:gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/empty_favorites_btn_text_popular"
                android:textColor="@color/dark_background_body"
                android:onClick="viewMostPopular"/>
            <Button
                android:id="@+id/btn_browse_top_rated"
                android:layout_margin="16dp"
                android:gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_favorites_btn_text_top_rated"
                android:textColor="@color/dark_background_body"
                android:onClick="viewTopRated"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
